// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledButton  StyledButton variant container 1`] = `
"border-width: 0px;
overflow-x: hidden;
overflow-y: hidden;
display: inline-flex;
align-items: center;
justify-content: center;
list-style: none;
-webkit-overflow-scrolling: touch;
box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14),
  0px 3px 1px -2px rgba(0, 0, 0, 0.12);
color: rgba(0, 0, 0, 0.87);
background-color: #e0e0e0;
font-family: Roboto, Open Sans, Helvetica Neue, Helvetica, Arial, sans-serif;
text-decoration: none;
user-select: none;
outline: none;
position: relative;
cursor: pointer;
:active:not(:disabled) {
  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14),
    0px 3px 14px 2px rgba(0, 0, 0, 0.12);
}
:disabled {
  color: rgba(0, 0, 0, 0.38);
  pointer-events: none;
  cursor: default;
}
:disabled {
  box-shadow: none;
}
> * {
  margin-left: 8px;
}
> *:first-child {
  margin-left: 0px;
}
"
`;

exports[`StyledButton  StyledButton variant outline 1`] = `
"border-width: 1px;
border-style: solid;
overflow-x: hidden;
overflow-y: hidden;
display: inline-flex;
align-items: center;
justify-content: center;
list-style: none;
-webkit-overflow-scrolling: touch;
color: rgba(0, 0, 0, 0.87);
border-color: rgba(0, 0, 0, 0.47);
background-color: transparent;
font-family: Roboto, Open Sans, Helvetica Neue, Helvetica, Arial, sans-serif;
text-decoration: none;
user-select: none;
outline: none;
position: relative;
cursor: pointer;
:disabled {
  color: rgba(0, 0, 0, 0.38);
  pointer-events: none;
  cursor: default;
}
> * {
  margin-left: 8px;
}
> *:first-child {
  margin-left: 0px;
}
"
`;

exports[`StyledButton  StyledButton variant text 1`] = `
"border-width: 0px;
overflow-x: hidden;
overflow-y: hidden;
display: inline-flex;
align-items: center;
justify-content: center;
list-style: none;
-webkit-overflow-scrolling: touch;
color: rgba(0, 0, 0, 0.87);
background-color: transparent;
font-family: Roboto, Open Sans, Helvetica Neue, Helvetica, Arial, sans-serif;
text-decoration: none;
user-select: none;
outline: none;
position: relative;
cursor: pointer;
:disabled {
  color: rgba(0, 0, 0, 0.38);
  pointer-events: none;
  cursor: default;
}
> * {
  margin-left: 8px;
}
> *:first-child {
  margin-left: 0px;
}
"
`;

exports[`StyledButton  StyledButton variant text cancel hover color 1`] = `
"border-width: 0px;
overflow-x: hidden;
overflow-y: hidden;
display: inline-flex;
align-items: center;
justify-content: center;
list-style: none;
-webkit-overflow-scrolling: touch;
color: rgba(0, 0, 0, 0.87);
background-color: transparent;
font-family: Roboto, Open Sans, Helvetica Neue, Helvetica, Arial, sans-serif;
text-decoration: none;
user-select: none;
outline: none;
position: relative;
cursor: pointer;
:disabled {
  color: rgba(0, 0, 0, 0.38);
  pointer-events: none;
  cursor: default;
}
> * {
  margin-left: 8px;
}
> *:first-child {
  margin-left: 0px;
}
"
`;
